--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ requests-oauthlib==1.3.0
 rsa==4.6
 scikit-learn==0.23.2
 scipy==1.5.2
+seaborn==0.11.0
 six==1.15.0
 sklearn==0.0
 tensorboard==2.3.0
@@ -42,4 +43,3 @@ termcolor==1.1.0
 threadpoolctl==2.1.0
 urllib3==1.25.10
 Werkzeug==1.0.1
-wrapt==1.12.1
